@@ -1,58 +1,62 @@
 <?php
-/***************************************************************
-*  Copyright notice
-*
-*  (c) 2010 Nils K. Windisch <windisch@sub.uni-goettingen.de>
-*  All rights reserved
-*
-*  This script is part of the TYPO3 project. The TYPO3 project is
-*  free software; you can redistribute it and/or modify
-*  it under the terms of the GNU General Public License as published by
-*  the Free Software Foundation; either version 2 of the License, or
-*  (at your option) any later version.
-*
-*  The GNU General Public License can be found at
-*  http://www.gnu.org/copyleft/gpl.html.
-*
-*  This script is distributed in the hope that it will be useful,
-*  but WITHOUT ANY WARRANTY; without even the implied warranty of
-*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-*  GNU General Public License for more details.
-*
-*  This copyright notice MUST APPEAR in all copies of the script!
-***************************************************************/
+
+/* * *************************************************************
+ *  Copyright notice
+ *
+ *  (c) 2010 Nils K. Windisch <windisch@sub.uni-goettingen.de>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ * ************************************************************* */
 require_once(t3lib_extMgm::extPath('nkwlib') . 'class.tx_nkwlib.php');
+
 /**
  * undocumented class
  *
  * @package default
  * @author Nils K. Windisch
- **/
+ * */
 class tx_nkwgok extends tx_nkwlib {
+
 	/**
 	 * undocumented class variable
 	 *
 	 * @var string
-	 **/
+	 * */
 	var $queryTable;
 	/**
 	 * undocumented class variable
 	 *
 	 * @var string
-	 **/
+	 * */
 	var $queryFor;
 	/**
 	 * undocumented class variable
 	 *
 	 * @var string
-	 **/
+	 * */
 	var $getvarsExpandArr;
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function addLanguageToWhereClause($query, $lang) {
 		if (!$lang) {
 			$lang = $this->getLanguage();
@@ -60,62 +64,66 @@ class tx_nkwgok extends tx_nkwlib {
 		$query .= ' AND sys_language_uid = ' . $GLOBALS['TYPO3_DB']->fullQuoteStr($lang);
 		return $query;
 	}
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function setQueryTable($str) {
 		$this->queryTable = $str;
 	}
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function setQueryFor($str) {
 		$this->queryFor = $str;
 	}
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function getQueryTable() {
 		return $this->queryTable;
 	}
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function getQueryFor() {
 		return $this->queryFor;
 	}
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function setGetvarsExpandArr($str) {
 		$this->getvarsExpandArr = $str;
 	}
+
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function getGetvarsExpandArr($str) {
 		return $this->getvarsExpandArr;
 	}
-
-
 
 	/**
 	 * Return GOK name based on the current language code.
@@ -139,12 +147,12 @@ class tx_nkwgok extends tx_nkwlib {
 	 * @param Boolean $simplify should the trailing {…} be removed? defaults to False
 	 * @return string
 	 */
-	private function GOKName ($gokRecord, $language="de", $simplify = False) {
+	private function GOKName($gokRecord, $language="de", $simplify = False) {
 		$displayName = $gokRecord['descr'];
 
 		if ($language == 'en') {
 			$englishName = $gokRecord['descr_en'];
-						t3lib_div::devLog($language . ": ". $englishName . $gokRecord['descr'], 'nkwgok', 1);
+			t3lib_div::devLog($language . ": " . $englishName . $gokRecord['descr'], 'nkwgok', 1);
 
 			if ($englishName) {
 				$displayName = $englishName;
@@ -159,14 +167,12 @@ class tx_nkwgok extends tx_nkwlib {
 		return trim($displayName);
 	}
 
-
-
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function makeOPAClink($str, $lang = 0) {
 		$conf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['nkwgok']);
 		$defaultOpacUrl = explode(',', $conf['defaultOpacUrl']);
@@ -180,17 +186,16 @@ class tx_nkwgok extends tx_nkwlib {
 		return $link;
 	}
 
-	
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function linkToOpac($gok, $lang = 0, $simplifyName = False, $language = "de") {
 		$str = '<a title="(' . $gok['gok'] . ') ' . $this->GOKName($gok, $language, $simplifyName) .
-			'" target="_blank" href="' . $this->makeOPAClink($gok, $lang) . '">' .
-			'<span class="GOKID">(' . $gok['gok'] . ')</span> ' . $this->GOKName($gok, $language, $simplifyName) . '</a>';
+				'" target="_blank" href="' . $this->makeOPAClink($gok, $lang) . '">' .
+				'<span class="GOKID">(' . $gok['gok'] . ')</span> ' . $this->GOKName($gok, $language, $simplifyName) . '</a>';
 		return $str;
 	}
 
@@ -199,59 +204,57 @@ class tx_nkwgok extends tx_nkwlib {
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function getChildren($parentPPN, $level, $depth) {
 		$children = Null;
 
 		if ($level < $depth || in_array($parentPPN, $this->getvarsExpandArr)) {
 			$whereClause = 'parent = ' . $GLOBALS['TYPO3_DB']->fullQuoteStr($parentPPN);
 			$res0 = $GLOBALS['TYPO3_DB']->exec_SELECTquery(
-				$this->getQueryFor(), 
-				$this->getQueryTable(), 
-				$whereClause, 
-				'', 
-				'gok ASC', 
-				'');
+							$this->getQueryFor(),
+							$this->getQueryTable(),
+							$whereClause,
+							'',
+							'gok ASC',
+							'');
 
 			$children = Array();
-			while($row0 = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res0)) {
-				$row0['children'] = $this->getChildren($row0['ppn'], ($level+1), $depth);
+			while ($row0 = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res0)) {
+				$row0['children'] = $this->getChildren($row0['ppn'], ($level + 1), $depth);
 				$children[] = $row0;
 			}
 		}
 		return $children;
 	}
 
-
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function getChildrenAjax($parentPPN, $level, $depth) {
 		$ppn = mysql_real_escape_string($parentPPN);
 		$res0 = $GLOBALS['TYPO3_DB']->exec_SELECTquery(
-			$this->getQueryFor(), 
-			$this->getQueryTable(), 
-			'parent = ' . $GLOBALS['TYPO3_DB']->fullQuoteStr($parentPPN), 
-			'', 
-			'gok ASC', 
-			'');
+						$this->getQueryFor(),
+						$this->getQueryTable(),
+						'parent = ' . $GLOBALS['TYPO3_DB']->fullQuoteStr($parentPPN),
+						'',
+						'gok ASC',
+						'');
 		$children = Array();
-		while($row0 = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res0)) {
+		while ($row0 = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res0)) {
 			$children[] = $row0;
 		}
 		return $children;
 	}
 
-
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function displayChildrenAjax($gok, $parentPpn, $lang = 0, $language = 'de') {
 		$return = '';
 		$level = 0;
@@ -266,17 +269,17 @@ class tx_nkwgok extends tx_nkwlib {
 			$expand = $ppnCurrent;
 			$return .= '<li id="c' . $ppnCurrent . '">';
 			if ($gok[$i0]['haschildren']) {
-				$return .= "<a href='#' id='ajaxLinkHide" . $ppnCurrent . "' style='cursor: pointer; display: none;' " 
-					. "onclick='hideGok(\"" . $ppnCurrent . "\"); return false'>" 
-					. '[-]</a>';
+				$return .= "<a href='#' id='ajaxLinkHide" . $ppnCurrent . "' style='cursor: pointer; display: none;' "
+						. "onclick='hideGok(\"" . $ppnCurrent . "\"); return false'>"
+						. '[-]</a>';
 			}
 			// construct link to OPAC
 			$tmpGokLink = $this->linkToOpac($gok[$i0], $lang, True, $language);
 			// construct More Link
-			$tmpGokMoreLink = "<a href='#' id='ajaxLinkShow" . $ppnCurrent 
-				. "' style='cursor: pointer;' onclick='expandGok(\"" . $ppnCurrent . "\", \"c" . $ppnCurrent 
-				. "\"); return false;'>" 
-				. '[+]</a> ';
+			$tmpGokMoreLink = "<a href='#' id='ajaxLinkShow" . $ppnCurrent
+					. "' style='cursor: pointer;' onclick='expandGok(\"" . $ppnCurrent . "\", \"c" . $ppnCurrent
+					. "\"); return false;'>"
+					. '[+]</a> ';
 
 			if ($gok[$i0]['haschildren']) {
 				$return .= $tmpGokMoreLink;
@@ -289,13 +292,12 @@ class tx_nkwgok extends tx_nkwlib {
 		return $return;
 	}
 
-
 	/**
 	 * undocumented function
 	 *
 	 * @return void
 	 * @author Nils K. Windisch
-	 **/
+	 * */
 	function displayChildren($conf, $gok, $level = 0, $expandMarker = 0, $parentPpn = 0) {
 		$tmp = '';
 		$size0 = sizeof($gok);
@@ -316,32 +318,32 @@ class tx_nkwgok extends tx_nkwlib {
 				// make JS more link
 				$tmpMoreLink = "<script type='text/javascript'>";
 				$tmpMoreLink .= "document.write('<a href=\"#\" id=\"ajaxLinkShow" . $ppnCurrent
-					. "\" style=\"cursor: pointer;\" onclick=\"expandGok(\'"
-					. $ppnCurrent . "\', \'c" . $ppnCurrent . "\');return false;\">[+]</a>');";
+						. "\" style=\"cursor: pointer;\" onclick=\"expandGok(\'"
+						. $ppnCurrent . "\', \'c" . $ppnCurrent . "\');return false;\">[+]</a>');";
 				$tmpMoreLink .= "</script>\n";
 
 
 				// make no JS more link
 				$tmpMoreLink .= "<noscript>";
 				$tmpMoreLink .= $this->pi_LinkToPage(
-					'[+]', 
-					$GLOBALS['TSFE']->id . "#c" . $ppnCurrent, '',
-					array('tx_' . $this->extKey . '[expand]' => $expand, 'no_cache' => 1));
+								'[+]',
+								$GLOBALS['TSFE']->id . "#c" . $ppnCurrent, '',
+								array('tx_' . $this->extKey . '[expand]' => $expand, 'no_cache' => 1));
 				$tmpMoreLink .= "</noscript>\n";
 				// construct Less Link
 				$tmpLessLink = "<script type='text/javascript'>";
 				$tmpLessLink .= "document.write('<a href=\"#\" id=\"ajaxLinkHide"
-					. $ppnCurrent . "\" style=\"cursor: pointer; display: none;\" onclick=\"hideGok(\'" . $ppnCurrent . "\', \'c"
-					. $ppnCurrent . "\');return false;\">[-]</a>')";
+						. $ppnCurrent . "\" style=\"cursor: pointer; display: none;\" onclick=\"hideGok(\'" . $ppnCurrent . "\', \'c"
+						. $ppnCurrent . "\');return false;\">[-]</a>')";
 				$tmpLessLink .= "</script>\n";
 				// make JS less link
 				$tmpLessLink .= '<noscript>';
 				$tmpLessLink .= '&nbsp;';
 				$tmpLessLink .= $this->pi_LinkToPage(
-					'[-]', 
-					$GLOBALS['TSFE']->id, 
-					'', 
-					array('tx_' . $this->extKey . '[expand]' => $expandMarker));
+								'[-]',
+								$GLOBALS['TSFE']->id,
+								'',
+								array('tx_' . $this->extKey . '[expand]' => $expandMarker));
 				$tmpLessLink .= "</noscript>\n";
 				if (!in_array($ppnCurrent, $conf['getVars']['expand']) && $gok[$i0]['haschildren']) {
 					// next line to catch in single gok view
@@ -369,5 +371,7 @@ class tx_nkwgok extends tx_nkwlib {
 		}
 		return $tmp;
 	}
+
 }
+
 ?>
